--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 	<%= include header %>
 	<div class="container">
 		<div class="text-center">
-			<h1>Press Mute</h1>
-			<p>Our Roster:</p>
+			<h1>Our Roster</h1>
+			<br>
 			<div class="main_roster">
 			<% users.forEach( function( player , index ){ %>
 				<%= include author-card %>
