--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -142,11 +142,20 @@ body {
 	border: 5px solid transparent;
 	position: relative;
 	width: 48%;
-	height: 23%;
+	height: 0;
+	padding-bottom: 22%;
 	background: white;
 	color: #444;
 	margin: 1%;
-	padding: 15px;
+	.post-wrapper {
+		position:absolute;
+	  width:100%;
+	  height:100%;
+	  overflow: scroll;
+		.post-sub-wrapper {
+			padding: 15px;
+		}
+	}
 }
 
 .instagram.admin-instagram {
