--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,10 @@
 	<div class="footer"></div>
+		
 	<script src="/js/app.js"></script>
+
+	<script src="http://fb.me/react-0.11.0.js"></script> 
+	<script src="http://facebook.github.io/react/js/JSXTransformer.js"></script>
+	<script src="http://facebook.github.io/react/js/html-jsx-lib.js"></script>
+
 </body>
 </html>
