--- a/views/public-profile.ejs
+++ b/views/public-profile.ejs
@@ -5,17 +5,21 @@
 
 	<div class="things">
 	<% if (player.instagram.token) { %>
-		<% player.things.reverse().forEach( function( thing , index ){ %>
+		<% player.things.sort(function(a,b) { return parseInt(a.position) - parseInt(b.position) }).forEach( function( thing , index ){ %>
 			<% if (thing.instagram) { %>
-				<div class="instagram" data-instagram='<%= JSON.stringify(thing) %>'>
+				<div class="instagram" id="thing-<%= thing._id %>" data-instagram='<%= JSON.stringify(thing) %>'>
 					<img class="instagram-image" src="<%= thing.url %>"/>
 					<span class="fa fa-instagram"></span>
 				</div>
 			<% } %>
 			<% if (thing.post) { %>
-				<div class="post">
-					<h3 class="title"><%= thing.title %></h3>
-					<%- thing.content %>
+				<div class="post" id="thing-<%= thing._id %>" >
+					<div class="post-wrapper">
+						<div class="post-sub-wrapper">
+							<h3 class="title"><%= thing.title %></h3>
+							<%- thing.content %>
+						</div>
+					</div>
 				</div>
 			<% } %>
 		<% }); %>
