--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,10 +24,10 @@
 		<h4 class="login">Login</h4>
 		<ul class="menu">
 			<li><a href="/auth/instagram"><span class="fa fa-instagram"></span> Instagram</a></li>
+			<li><a href="/auth/facebook"><span class="fa fa-facebook"></span> Facebook</a></li>
+			<li><a href="/auth/twitter"><span class="fa fa-twitter"></span> Twitter</a></li>
 			<li><a href="/login"><span class="fa fa-user"></span> E-Mail Login</a></li>
 			<li><span class="fa fa-user"></span> E-Mail Signup</li>
-			<li><span class="fa fa-facebook"></span> Facebook</li>
-			<li><span class="fa fa-twitter"></span> Twitter</li>
 		</ul>
 		<% } %>
 
