--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,14 +18,22 @@
 			<ul class="menu">
 				<li><a href="/profile">Edit Profile</a></li>
 				<li><a href="/logout">Logout</a></li>
+				<% if (user.facebook) { %>
+					<li><span class="fa fa-facebook"></span> <%= user.facebook.name %></li>
+				<% } else { %> 
+					<li><a href="/connect/facebook"><span class="fa fa-facebook"></span> Facebook</a></li>
+				<% } %>
+				<% if (user.twitter) { %>
+					<li><span class="fa fa-twitter"></span> <%= user.twitter.displayName %></li>
+				<% } else { %> 
+					<li><a href="/connect/twitter"><span class="fa fa-twitter"></span> Twitter</a></li>
+				<% } %>
 			</ul>
 			<% } %>
 		<% } else { %>
 		<h4 class="login">Login</h4>
 		<ul class="menu">
 			<li><a href="/auth/instagram"><span class="fa fa-instagram"></span> Instagram</a></li>
-			<li><a href="/auth/facebook"><span class="fa fa-facebook"></span> Facebook</a></li>
-			<li><a href="/auth/twitter"><span class="fa fa-twitter"></span> Twitter</a></li>
 			<li><a href="/login"><span class="fa fa-user"></span> E-Mail Login</a></li>
 			<li><span class="fa fa-user"></span> E-Mail Signup</li>
 		</ul>
