Changed login stuff

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -33,9 +33,7 @@
 		<% } else { %>
 		<h4 class="login">Login</h4>
 		<ul class="menu">
-			<li><a href="/auth/instagram"><span class="fa fa-instagram"></span> Instagram</a></li>
-			<li><a href="/login"><span class="fa fa-user"></span> E-Mail Login</a></li>
-			<li><span class="fa fa-user"></span> E-Mail Signup</li>
+			<li><a href="/auth/instagram"><span class="fa fa-instagram"></span> Instagram Login</a></li>
 		</ul>
 		<% } %>
 
