--- a/views/author-card.ejs
+++ b/views/author-card.ejs
@@ -2,7 +2,7 @@
 	<div class="author" data-instagram="<%= player.instagram.token %>">
 		<div class="image"></div>
 	</div>
-	<h5 class="title"><a href="users/<%= player.id %>"><%= player.name || player.instagram.displayName %></a></h5>
+	<h5 class="title"><a href="/users/<%= player.id %>"><%= player.name || player.instagram.displayName %></a></h5>
 	<% if (player.position) {%><h6 class="position"><%= player.position %></h6><% } %>
 	<% if (player.description) {%><p class="description"><%= player.description %></p><% } %>
 	<% if (locals.user) {%>
