--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -3,11 +3,10 @@ body {
 }
 
 .instagram {
-	width: 23%;
+	width: 200px;
 	display: inline-block;
-	float: left;
 	position: relative;
-	margin: 1%;
+	margin: 10px;
 }
 
 .instagram-image {
@@ -137,21 +136,12 @@ body {
 }
 
 .post { 
-	display: inline-block;
-	float: left;
 	border: 5px solid transparent;
-	position: relative;
-	width: 48%;
-	height: 0;
-	padding-bottom: 22%;
 	background: white;
 	color: #444;
 	margin: 1%;
 	.post-wrapper {
-		position:absolute;
 	  width:100%;
-	  height:100%;
-	  overflow: scroll;
 		.post-sub-wrapper {
 			padding: 15px;
 		}
@@ -235,9 +225,47 @@ body {
 	}
 }
 
+
+
 .profile-content {
 	width: 69%;
 	display: inline-block;
+	vertical-align: top;
+
+	.content-controls {
+		.content-items {
+			display: inline-block;
+			padding: 15px;
+			margin-bottom: 0;
+			border: 1px solid white;
+			border-bottom: white;
+			cursor: pointer;
+			margin-top: 10px;
+			font-size: 14px;
+		}
+		.content-items.active, .content-items:hover {
+			background: white;
+		}
+	}
+	.content-container {
+		background: white;
+		padding: 15px;
+		.instagrams, .posts {
+			display: none;
+		} 
+		.instagrams.active, .posts.active {
+			display: block;
+
+		}
+		.instagrams {
+			max-height: 400px;
+			overflow: scroll;
+		}
+	}
+}
+
+.column-content {
+	display: block;
 	vertical-align: top;
 
 	.content-controls {
