--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,10 +1,24 @@
-	<div class="footer"></div>
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h3>About Football by Football</h3>
+					<p>Most judges practice law before donning a robe. Most car salesmen have driven a car. And we presume most sex therapists aren’t virgins. 
+ 
+					<p>FootballByFootball.com is a football analysis website providing unique player-writer generated content; owned & operated by experienced football players. 
+					 
+					<p>Experience counts immensely—especially in analyzing the world’s most complex sport.  A tiny percentage of the writing population has football experience.  This is a disparity in need of a change.     
+					 
+					<p>Football fans want insight.  And when the world orders a steak, you don’t butcher a chicken. 
+					 
+					<p>Welcome to FootballByFootball.com.
+				</div>
+			</div>
+		</div>
+		
+	</div>
 		
 	<script src="/js/app.js"></script>
-
-	<script src="http://fb.me/react-0.11.0.js"></script> 
-	<script src="http://facebook.github.io/react/js/JSXTransformer.js"></script>
-	<script src="http://facebook.github.io/react/js/html-jsx-lib.js"></script>
 
 </body>
 </html>
