--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,92 @@
 	<%= include header %>
+	<div class="main-articles">
 	<div class="container">
-		<div class="text-center">
-			<h1>Our Roster</h1>
-			<br>
-			<div class="main_roster">
-			<% users.forEach( function( player , index ){ %>
-				<%= include author-card %>
-			<% }); %>
+
+		<div class="row">
+			
+			<div class="col-md-6">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/manziel_hoyer.jpg)">
+							<div class="overcast"></div>
+							<div class="headline">
+								<div class="white banner left">COLUMN:</div>
+								<div class="inner-content">
+									<div class="copy"><a href="/column/memo-to-johnny-rookie">Memo to Johnny Rookie</a></div>
+									<div class="byline">
+										Football <span class="by">by</span> Sage Rosenfels
+										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6" style="margin-top: 20px;">
+						<div class="medium-article" style="background-image: url(/img/medium-article-image.jpg)">
+							<div class="overcast"></div>
+							<div class="white banner right">COLUMN:</div>
+							<div class="headline">
+								<div class="inner-content">
+									<div class="copy"><a href="/column/nfl-stress-the-m-effers">NFL Stress & the M-effers</a></div>
+									<div class="byline">
+										Football <span class="by">by</span> Grey Ruegamerr
+										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6" style="margin-top: 20px;">
+						<div class="medium-article" style="background-image: url(/img/medium-article-image.jpg)">
+							<div class="overcast"></div>
+							<div class="black banner right">COLUMN:</div>
+							<div class="headline">
+								<div class="inner-content">
+									<div class="copy"><a href="/column/dont-call-me-maybe">Don't Call Me Maybe</a></div>
+									<div class="byline">
+										Football <span class="by">by</span> Joel Dreessen
+										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_joeldreessen.jpg)"></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
+
+			<div class="col-md-6">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="medium-article lockerroom">
+							<div class="black banner right">LOCKER ROOM:</div>
+							<div class="headline">
+								<div class="inner-content">
+									<div class="copy"><a href="/lockerroom/making-it-through-final-roster-cuts">Making it Through Final Roster Cuts.</a></div>
+								</div>
+							</div>
+						</div>
+						<div class="locker-authors">
+							<div class="author-image-wrap">
+								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_earnestbyner.jpg)"></div>
+							</div>
+							<div class="author-image-wrap">
+								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_jayforeman.jpg)"></div>
+							</div>
+							<div class="author-image-wrap">
+								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_michaelrobinson.jpg)"></div>
+							</div>
+							<div class="author-image-wrap">
+								<div class="author-image"  style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_mattchatham.jpg)"></div>
+						</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
+
+	</div>
 	</div>
 	<%= include footer %>
