--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -623,7 +623,7 @@ img {
 .topbar {
 	background: black;
 	color: white;
-	
+	padding: 5px 0;
 	line-height: 3;
 	margin: 0;
 
@@ -788,7 +788,7 @@ img {
 		color: white;
 
 		.inner-content {
-			padding: 10px 20px;
+			padding: 10px 15px;
 
 			.copy {
 				font-size: 20px;
@@ -989,6 +989,12 @@ img {
 	.column-content-wrapper {
 		margin: 25px 0 50px;
 	}
+
+	.column-header {
+		.date {
+			color: #999;
+		}
+	}
 }
 
 .author-badge {
@@ -1036,5 +1042,12 @@ img {
 			margin: 0;
 			line-height: 1.3;
 		}
+	}
+}
+
+@media (max-width: 991px) {
+	.author-badge {
+		position: relative;
+		margin-bottom: 25px;
 	}
 }
