--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 							<div class="headline">
 								<div class="white banner left">COLUMN:</div>
 								<div class="inner-content">
-									<div class="copy"><a href="/column/memo-to-johnny-rookie">Memo to Johnny Rookie</a></div>
+									<div class="copy"><a href="/column/memo-to-johnny-rookie"><h3>Memo to Johnny Rookie</h3></a></div>
 									<div class="byline">
 										Football <span class="by">by</span> Sage Rosenfels
 										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
@@ -29,7 +29,7 @@
 							<div class="white banner right">COLUMN:</div>
 							<div class="headline">
 								<div class="inner-content">
-									<div class="copy"><a href="/column/nfl-stress-the-m-effers">NFL Stress & the M-effers</a></div>
+									<div class="copy"><a href="/column/nfl-stress-the-m-effers"><h3>NFL Stress & the M-effers</h3></a></div>
 									<div class="byline">
 										Football <span class="by">by</span> Grey Ruegamerr
 										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
@@ -44,7 +44,7 @@
 							<div class="black banner right">COLUMN:</div>
 							<div class="headline">
 								<div class="inner-content">
-									<div class="copy"><a href="/column/dont-call-me-maybe">Don't Call Me Maybe</a></div>
+									<div class="copy"><a href="/column/dont-call-me-maybe"><h3>Don't Call Me Maybe</h3></a></div>
 									<div class="byline">
 										Football <span class="by">by</span> Joel Dreessen
 										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_joeldreessen.jpg)"></div>
@@ -63,7 +63,7 @@
 							<div class="black banner right">LOCKER ROOM:</div>
 							<div class="headline">
 								<div class="inner-content">
-									<div class="copy"><a href="/lockerroom/making-it-through-final-roster-cuts">Making it Through Final Roster Cuts.</a></div>
+									<div class="copy"><a href="/lockerroom/making-it-through-final-roster-cuts"><h3>Making it Through Final Roster Cuts</h3></a></div>
 								</div>
 							</div>
 						</div>
