--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -14,6 +14,24 @@
 					<p>Welcome to FootballByFootball.com.
 				</div>
 			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<h3>Join Our Newsletter</h3>
+					<form action="http://footballbyfootball.createsend.com/t/t/s/ijjdkl/" method="post">
+				    <p class="cf">
+				        <label for="fieldName">Name</label>
+				        <input id="fieldName" name="cm-name" type="text" />
+				    </p>
+				    <p class="cf">
+				        <label for="fieldEmail">Email</label>
+				        <input id="fieldEmail" name="cm-ijjdkl-ijjdkl" type="email" required />
+				    </p>
+				    <p class="cf">
+				        <button type="submit">Subscribe</button>
+				    </p>
+					</form>
+				</div>
+			</div>
 		</div>
 		
 	</div>
