--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="/css/app.css">
-
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	
 	<script src="/js/jquery.1.9.min.js"></script>
 	<!-- <script src="//code.jquery.com/ui/1.11.0/jquery-ui.js"></script> -->
 	<script type="text/javascript" src="//use.typekit.net/vnz8awm.js"></script>
