--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 								<div class="inner-content">
 									<div class="copy"><a href="/column/memo-to-johnny-rookie"><h3>Memo to Johnny Rookie</h3></a></div>
 									<div class="byline">
-										Football <span class="by">by</span> Sage Rosenfels
+										Sage Rosenfels
 										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
 									</div>
 								</div>
@@ -31,7 +31,7 @@
 								<div class="inner-content">
 									<div class="copy"><a href="/column/nfl-stress-the-m-effers"><h3>NFL Stress & the M-effers</h3></a></div>
 									<div class="byline">
-										Football <span class="by">by</span> Grey Ruegamerr
+										Grey Ruegamerr
 										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
 									</div>
 								</div>
@@ -46,7 +46,7 @@
 								<div class="inner-content">
 									<div class="copy"><a href="/column/dont-call-me-maybe"><h3>Don't Call Me Maybe</h3></a></div>
 									<div class="byline">
-										Football <span class="by">by</span> Joel Dreessen
+										Joel Dreessen
 										<div class="author-image" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_joeldreessen.jpg)"></div>
 									</div>
 								</div>
