--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
 						</div>
 					</div>
 					<div class="col-md-6" style="margin-top: 20px;">
-						<div class="medium-article" style="background-image: url(/img/medium-article-image.jpg)">
+						<div class="medium-article" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/columns/dreessden-dontcallmemaybe.jpg)">
 							<div class="overcast"></div>
 							<div class="black banner right">COLUMN:</div>
 							<div class="headline">
