--- a/views/memo-to-johnny-rookie.ejs
+++ b/views/memo-to-johnny-rookie.ejs
@@ -27,7 +27,7 @@
 					<p>After the college season, it seemed he was taking the next step maturity wise, as he usually said and did the right things.  Sure, he flashed his infamous (yet childish) money signs seconds after being drafted by the Browns, but there was nothing else negative to point to since the college season had ended.  During offseason workouts, OTA’s, minicamp...nothing. 
 					 
 					<p>Then came the break before training camp and those concerns seemed to come to fruition.  Pictures of partying in Vegas, mysterious rolled-up dollar bills, and selfies with the wild and immature Justin Bieber, had to be disconcerting for the Browns’ coaches, ownership and fans.  He got the “sit down” with upper management and apologized (sort of) but used his young age of 21 as the excuse for the decisions he makes. 
-						
+
 					<hr>
 					 
 					<p>Let’s imagine a hypothetical.  You’re playing a great game against the Buffalo Bills.  Your team grabs the lead in the fourth quarter, but you end up throwing two interceptions that cost your team the game.  You’re physically beat up and mentally down in the dumps.  But the Indianapolis Colts, led by Andrew Luck, are coming to town. 
@@ -71,7 +71,7 @@
 					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_sagerosenfels.jpg)"></div>
 					<div class="content">
 						<p class="item">Quarterback</p>
-						<p class="item">in the NFL</p>
+						<p class="item">12 years in NFL</p>
 					</div>
 				</div>
 			</div>
