--- a/views/nfl-stress-the-m-effers.ejs
+++ b/views/nfl-stress-the-m-effers.ejs
@@ -47,8 +47,8 @@
 					<div class="black banner right">Football <span class="by">by</span> Grey Ruegamerr</div>
 					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_greyruegamerr.jpg)"></div>
 					<div class="content">
-						<p class="item">Quarterback</p>
-						<p class="item">in the NFL</p>
+						<p class="item">Offensive Line</p>
+						<p class="item">10 years in NFL</p>
 					</div>
 				</div>
 			</div>
