--- a/views/dont-call-me-maybe.ejs
+++ b/views/dont-call-me-maybe.ejs
@@ -6,7 +6,7 @@
 				<div class="column-header">
 					<h2 class="title">Don't Call Me Maybe</h2>
 					<p class="date">September 2, 2014</p>
-					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/manziel_hoyer.jpg" alt="">
+					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/dreessden-dontcallmemaybe.jpg" alt="">
 				</div>
 
 				<div class="column-content-wrapper">
@@ -34,6 +34,8 @@
 					 
 					<p>I would play well in all of the preseason games.  In the fourth game in Philadelphia I “left it all on the field”, as the cliché goes.  Playing wherever they needed me on special teams and making several catches on offense, I was feeling good about my chances of making the 53 man roster.  Our head coach, Herm Edwards had announced that all of the required cuts would be made over the next 48 hours. 
 					 
+					<img src="https://s3.amazonaws.com/footballbyfootball-dev/columns/dreessden-caption.jpg"  style="float: right; width: 375px;"alt=""> 
+
 					<p>Now out of the dorms and housed in the Long Island Marriott, my then girlfriend and now wife spent those 48 hours playing general manager.  We’d go over the entire roster several times and try to determine who would be given their walking papers.  I tried to stay positive, reminding myself that this regime doesn’t cut draft picks. Most NFL teams keep three tight ends, and I was the third. I had improved every practice and every coach loved my effort and attitude. 
 					 
 					<p>Then my mind would wander to the negative.  The Jets only kept two tight ends on the 53 man roster the year before, 6th round draft picks get cut all of the time, and I had heard my name brought up in conversations about the practice squad.  I would stare at my cell phone and pray it didn't ring. 
@@ -55,8 +57,8 @@
 					<div class="black banner right">Football <span class="by">by</span> Joel Dreessen</div>
 					<div class="author-square" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/Headshots/pro_joeldreessen.jpg)"></div>
 					<div class="content">
-						<p class="item">Quarterback</p>
-						<p class="item">in the NFL</p>
+						<p class="item">Tight End</p>
+						<p class="item">8 years in NFL</p>
 					</div>
 				</div>
 			</div>
