--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -607,7 +607,7 @@ img {
 }
 
 .masthead {
-	background: url('/img/masthead1.png');
+	background: url('/img/masthead.jpg');
 	background-size: cover;
 	background-position: center bottom;
 	padding-top: 200px;
